compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/FieldWithoutName.java
public final class SimpleClass /* SimpleClass*/ {
  public  SimpleClass();//  .ctor()
}
